force-app/main/default/objects/Breach__c/Breach__c.object-meta.xml
<CustomObject>
    <label>Breach</label>
    <nameField>
        <label>ATM ID</label>
        
        <type>Text</type>
    </nameField>
    <pluralLabel>Breaches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>