force-app/main/default/objects/Breach__c/fields/ATM_Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>ATM_Removal_Date__c</fullName>
    <label>ATM Removal Date</label>
    <type>Date</type>
</CustomField>