force-app/main/default/objects/Breach__c/fields/ATM_Removed__c.field-meta.xml
<CustomField>
    <fullName>ATM_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If ATM removed, please indicate ATM removal date in the below field</inlineHelpText>
    <label>ATM Removed?</label>
    <type>Checkbox</type>
</CustomField>