force-app/main/default/objects/Breach__c/fields/ATM_Status__c.field-meta.xml
<CustomField>
    <fullName>ATM_Status__c</fullName>
    <label>ATM Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Service (Transacting)</fullName>
            </value>
            <value>
                <fullName>Out of Service (Not Transacting)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>