force-app/main/default/objects/Breach__c/fields/ATM_Transaction_Table__c.field-meta.xml
<CustomField>
    <fullName>ATM_Transaction_Table__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATM Transaction Table</label>
    <type>Checkbox</type>
</CustomField>