force-app/main/default/objects/Breach__c/fields/Breach_Closure_Comments__c.field-meta.xml
<CustomField>
    <fullName>Breach_Closure_Comments__c</fullName>
    <label>Breach Closure Comments</label>
    <type>TextArea</type>
</CustomField>