force-app/main/default/objects/Breach__c/fields/Breach_Notification_Letter_Age__c.field-meta.xml
<CustomField>
    <fullName>Breach_Notification_Letter_Age__c</fullName>
    <formula>TODAY() - Date_Breach_Notification_Letter_Mailed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breach Notification Letter Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>