force-app/main/default/objects/Breach__c/fields/Breach_Owner_Allocation_Date__c.field-meta.xml
<CustomField>
    <fullName>Breach_Owner_Allocation_Date__c</fullName>
    <label>Breach Owner Allocation Date</label>
    <type>Date</type>
</CustomField>