force-app/main/default/objects/Breach__c/fields/Breach_Reason__c.field-meta.xml
<CustomField>
    <fullName>Breach_Reason__c</fullName>
    <label>Breach Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATM Obstruction (Site Open)</fullName>
            </value>
            <value>
                <fullName>ATM Switched Off</fullName>
            </value>
            <value>
                <fullName>Change Of Ownership</fullName>
            </value>
            <value>
                <fullName>Competitor Installation</fullName>
            </value>
            <value>
                <fullName>Failure To Fill</fullName>
            </value>
            <value>
                <fullName>Failure To Provide Access (Site Closure)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Power Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>