force-app/main/default/objects/Breach__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Breaches</relationshipLabel>
    <relationshipName>Breaches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>