force-app/main/default/objects/Breach__c/fields/Copy_of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy of Agreement</label>
    <type>Checkbox</type>
</CustomField>