force-app/main/default/objects/Breach__c/fields/Correspondence_Returned_to_Sender_Notes__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Returned_to_Sender_Notes__c</fullName>
    <label>Correspondence Returned to Sender Notes</label>
    <type>TextArea</type>
</CustomField>