force-app/main/default/objects/Breach__c/fields/Date_Breach_Notification_Letter_Mailed__c.field-meta.xml
<CustomField>
    <fullName>Date_Breach_Notification_Letter_Mailed__c</fullName>
    <label>Date Breach Notification Letter Mailed</label>
    <type>Date</type>
</CustomField>