force-app/main/default/objects/Breach__c/fields/Date_Breach_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Date_Breach_Occurred__c</fullName>
    <label>Date Breach Occurred</label>
    <type>Date</type>
</CustomField>