force-app/main/default/objects/Breach__c/fields/Date_Termination_Notice_Letter_Mailed__c.field-meta.xml
<CustomField>
    <fullName>Date_Termination_Notice_Letter_Mailed__c</fullName>
    <label>Date Termination Notice Letter Mailed</label>
    <type>Date</type>
</CustomField>