force-app/main/default/objects/Breach__c/fields/Final_Warning_Letter_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Final_Warning_Letter_Tracking__c</fullName>
    <label>Final Warning Letter Tracking #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>