force-app/main/default/objects/Breach__c/fields/Financial_Calculations__c.field-meta.xml
<CustomField>
    <fullName>Financial_Calculations__c</fullName>
    <label>Financial Calculations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>