force-app/main/default/objects/Breach__c/fields/FTU_PTU_CiT_MR_ATM__c.field-meta.xml
<CustomField>
    <fullName>FTU_PTU_CiT_MR_ATM__c</fullName>
    <label>FTU/PTU/CiT/MR ATM?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FTU CiT</fullName>
            </value>
            <value>
                <fullName>FTU MR</fullName>
            </value>
            <value>
                <fullName>PTU CiT</fullName>
            </value>
            <value>
                <fullName>PTU MR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>