force-app/main/default/objects/Breach__c/fields/Generic_Breach_Letter_Mail_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Generic_Breach_Letter_Mail_Tracking__c</fullName>
    <label>Generic Breach Letter Mail Tracking #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>