force-app/main/default/objects/Breach__c/fields/Is_the_Merchant_being_pursued_for_Rates__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Merchant_being_pursued_for_Rates__c</fullName>
    <label>Is the Merchant being pursued for Rates?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>