force-app/main/default/objects/Breach__c/fields/Notification_of_Breach__c.field-meta.xml
<CustomField>
    <fullName>Notification_of_Breach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification of Breach</label>
    <type>Checkbox</type>
</CustomField>