force-app/main/default/objects/Breach__c/fields/Number_of_Business_Days_w_Breach_Owner__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Business_Days_w_Breach_Owner__c</fullName>
    <formula>(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Breach_Owner_Allocation_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Breach_Owner_Allocation_Date__c - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Business Days w/ Breach Owner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>