force-app/main/default/objects/Breach__c/fields/Office_Copies_Attached__c.field-meta.xml
<CustomField>
    <fullName>Office_Copies_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Office Copies Attached</label>
    <type>Checkbox</type>
</CustomField>