force-app/main/default/objects/Breach__c/fields/Other_Relevant_Documents__c.field-meta.xml
<CustomField>
    <fullName>Other_Relevant_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please list your other relevant documents in the comments box below</inlineHelpText>
    <label>Other Relevant Documents</label>
    <type>Checkbox</type>
</CustomField>