force-app/main/default/objects/Breach__c/fields/Relevant_Emails__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relevant Emails</label>
    <type>Checkbox</type>
</CustomField>