force-app/main/default/objects/Breach__c/fields/temp_auto_number_field__c.field-meta.xml
<CustomField>
    <fullName>temp_auto_number_field__c</fullName>
    <displayFormat>B-{000000}</displayFormat>
    <label>temp auto number field</label>
    <type>AutoNumber</type>
</CustomField>