force-app/main/default/objects/Breach__c/fields/Total_Written_Off_Damages_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Written_Off_Damages_Amount__c</fullName>
    <label>Total Written Off Damages Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>