force-app/main/default/objects/Breach__c/recordTypes/Breach.recordType-meta.xml
<RecordType>
    <fullName>Breach</fullName>
    <active>true</active>
    <label>Breach</label>
</RecordType>