force-app/main/default/objects/Breach__c/validationRules/Lock_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Record</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   !$Setup.Automation_Setting__c.Skip_Validation_Rule__c, 
 $Permission.CATM_Sys_Admin = false,
   NOT(ISCHANGED(Breach_Stage__c)),
   OR(
      ISPICKVAL(Breach_Stage__c, &apos;Sales - Breach Closed&apos;),
      ISPICKVAL(Breach_Stage__c, &apos;Legal - Breach Closed&apos;)
   )
)</errorConditionFormula>
    <errorMessage>The breach is locked and can not be changed, please contact your administrator.</errorMessage>
</ValidationRule>