force-app/main/default/objects/Breach__c/validationRules/Select_Sales_Territory.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Sales_Territory</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
!$Setup.Automation_Setting__c.Skip_Validation_Rule__c, 
 IsPickVal ( Breach_Stage__c ,&quot;WIP - OFFICE&quot;),
ISBLANK(TEXT( Sales_Territory__c ))
)</errorConditionFormula>
    <errorMessage>Please select Sales Territory</errorMessage>
</ValidationRule>