force-app/main/default/objects/Breach__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Contract__c</columns>
    <columns>Breach_Number__c</columns>
    <columns>NAME</columns>
    <columns>Site_Name__c</columns>
    <columns>ATM_Status__c</columns>
    <columns>Breach_Reason__c</columns>
    <columns>Breach_Stage__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>Number_of_Business_Days_w_Breach_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>CATM All Breaches</label>
    <sharedTo>
        <role>International_Business_Grp</role>
        <role>UK_ROI_IBG_Retail_Teams_Leader</role>
        <role>UK_ROI_IBG_Team_Mngr</role>
        <role>UK_ROI_IBG_Team_TEs</role>
        <role>UK_ROI_IBG_Team_TMs</role>
    </sharedTo>
</ListView>