force-app/main/default/objects/Breach__c/listViews/All_Open_Breaches_Allocated_To_Me.listView-meta.xml
<ListView>
    <fullName>All_Open_Breaches_Allocated_To_Me</fullName>
    <columns>Breach_Number__c</columns>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>Number_of_Business_Days_w_Breach_Owner__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Breach_Stage__c</columns>
    <columns>Breach_Reason__c</columns>
    <columns>Sales_Team_Breach_Comments__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Breach_Stage__c</field>
        <operation>notEqual</operation>
        <value>Sales - Breach Closed,Legal - Breach Closed</value>
    </filters>
    <label>CATM OPEN Breaches Allocated To Me</label>
    <sharedTo>
        <role>International_Business_Grp</role>
        <role>UK_ROI_IBG_Team_Mngr</role>
        <role>UK_ROI_IBG_Team_TMs</role>
    </sharedTo>
</ListView>