force-app/main/default/objects/Breach__c/listViews/Breaches_allocated_to_SME_Executives.listView-meta.xml
<ListView>
    <fullName>Breaches_allocated_to_SME_Executives</fullName>
    <columns>Contract__c</columns>
    <columns>Breach_Number__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Number_of_Business_Days_w_Breach_Owner__c</columns>
    <columns>NAME</columns>
    <columns>Site_Name__c</columns>
    <columns>Breach_Stage__c</columns>
    <columns>Breach_Reason__c</columns>
    <columns>Sales_Team_Breach_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Breach_Stage__c</field>
        <operation>equals</operation>
        <value>Awaiting Review,WIP - Office,WIP - Field,Handover Review,Legal - Breach Termination,ATM Removed &amp; Damages with Legal to Pursue</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>contains</operation>
        <value>Roberts,Poppy,Cooper,Bartlett-Pitch,Welham,Moorhead</value>
    </filters>
    <label>CATM Breaches alloted to SME Executives</label>
    <sharedTo>
        <role>International_Business_Grp</role>
        <role>UK_ROI_IBG_Retail_Teams_Leader</role>
        <role>UK_ROI_IBG_Team_Mngr</role>
        <role>UK_ROI_IBG_Team_TEs</role>
        <role>UK_ROI_IBG_Team_TMs</role>
    </sharedTo>
</ListView>