force-app/main/default/objects/Breach__c/listViews/CLOSED_Breaches.listView-meta.xml
<ListView>
    <fullName>CLOSED_Breaches</fullName>
    <columns>Breach_Number__c</columns>
    <columns>Breach_Reason__c</columns>
    <columns>NAME</columns>
    <columns>Site_Name__c</columns>
    <columns>Breach_Stage__c</columns>
    <columns>Breach_Closure_Comments__c</columns>
    <columns>Breach_Closure_Reason__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>Contract__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Breach_Stage__c</field>
        <operation>equals</operation>
        <value>Sales - Breach Closed,Legal - Breach Closed</value>
    </filters>
    <label>CATM CLOSED Breaches</label>
    <sharedTo>
        <role>International_Business_Grp</role>
        <role>UK_ROI_IBG_Retail_Teams_Leader</role>
        <role>UK_ROI_IBG_Team_Mngr</role>
        <role>UK_ROI_IBG_Team_TEs</role>
        <role>UK_ROI_IBG_Team_TMs</role>
    </sharedTo>
</ListView>