force-app/main/default/objects/Breach__c/listViews/HANDOVER_Breaches.listView-meta.xml
<ListView>
    <fullName>HANDOVER_Breaches</fullName>
    <columns>Contract__c</columns>
    <columns>Breach_Number__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Number_of_Business_Days_w_Breach_Owner__c</columns>
    <columns>NAME</columns>
    <columns>Site_Name__c</columns>
    <columns>Breach_Stage__c</columns>
    <columns>Breach_Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Breach_Stage__c</field>
        <operation>equals</operation>
        <value>Handover Review</value>
    </filters>
    <label>CATM HANDOVER REVIEW  Breaches</label>
    <sharedTo>
        <role>International_Business_Grp</role>
        <role>UK_ROI_IBG_Retail_Teams_Leader</role>
        <role>UK_ROI_IBG_Team_Mngr</role>
        <role>UK_ROI_IBG_Team_TEs</role>
        <role>UK_ROI_IBG_Team_TMs</role>
    </sharedTo>
</ListView>