force-app/main/default/objects/Breach__c/listViews/My_Breaches.listView-meta.xml
<ListView>
    <fullName>My_Breaches</fullName>
    <columns>Breach_Number__c</columns>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Number_of_Business_Days_w_Breach_Owner__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Breach_Stage__c</columns>
    <columns>Breach_Reason__c</columns>
    <columns>Sales_Team_Breach_Comments__c</columns>
    <filterScope>Mine</filterScope>
    <label>CATM Breaches Alloted To Me(Open&amp;Closed)</label>
    <sharedTo>
        <role>International_Business_Grp</role>
        <role>UK_ROI_IBG_Retail_Teams_Leader</role>
        <role>UK_ROI_IBG_Team_Mngr</role>
        <role>UK_ROI_IBG_Team_TEs</role>
        <role>UK_ROI_IBG_Team_TMs</role>
        <role>UK_ROI_Retail_Team_NAMs</role>
    </sharedTo>
</ListView>