force-app/main/default/objects/Breach__c/listViews/My_Breaches_Created_TODAY.listView-meta.xml
<ListView>
    <fullName>My_Breaches_Created_TODAY</fullName>
    <columns>Breach_Number__c</columns>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Breach_Reason__c</columns>
    <columns>Breach_Stage__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Number_of_Business_Days_w_Breach_Owner__c</columns>
    <columns>Date_Generic_Breach_Letter_Mailed__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>CATM My Breaches Created TODAY</label>
    <sharedTo>
        <role>International_Business_Grp</role>
        <role>UK_ROI_IBG_Retail_Teams_Leader</role>
        <role>UK_ROI_IBG_Team_Mngr</role>
        <role>UK_ROI_IBG_Team_TEs</role>
        <role>UK_ROI_IBG_Team_TMs</role>
    </sharedTo>
</ListView>