force-app/main/default/objects/Breach__c/listViews/My_WIP_OFFICE_Breaches_5_DAYS.listView-meta.xml
<ListView>
    <fullName>My_WIP_OFFICE_Breaches_5_DAYS</fullName>
    <columns>Breach_Number__c</columns>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Number_of_Business_Days_w_Breach_Owner__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Breach_Stage__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Breach_Stage__c</field>
        <operation>equals</operation>
        <value>WIP - Office</value>
    </filters>
    <filters>
        <field>Number_of_Business_Days_w_Breach_Owner__c</field>
        <operation>greaterThan</operation>
        <value>5</value>
    </filters>
    <label>CATM My WIP-OFFICE Breaches&gt;than 5 DAYS</label>
    <sharedTo>
        <role>UK_ROI_IBG_Team_TMs</role>
        <role>UK_ROI_Retail_Team_NAMs</role>
    </sharedTo>
</ListView>