force-app/main/default/objects/Breach__c/listViews/WIP_OFFICE_Breaches_5_DAYS.listView-meta.xml
<ListView>
    <fullName>WIP_OFFICE_Breaches_5_DAYS</fullName>
    <columns>Breach_Number__c</columns>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Number_of_Business_Days_w_Breach_Owner__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Breach_Stage__c</columns>
    <columns>Breach_Reason__c</columns>
    <columns>Sales_Team_Breach_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Breach_Stage__c</field>
        <operation>equals</operation>
        <value>WIP - Office</value>
    </filters>
    <filters>
        <field>Number_of_Business_Days_w_Breach_Owner__c</field>
        <operation>greaterThan</operation>
        <value>5</value>
    </filters>
    <label>CATM All WIP-OFFICE Breaches&gt;than 5 DAYS</label>
    <sharedTo>
        <role>International_Business_Grp</role>
        <role>UK_ROI_IBG_Retail_Teams_Leader</role>
        <role>UK_ROI_IBG_Team_Mngr</role>
        <role>UK_ROI_IBG_Team_TEs</role>
        <role>UK_ROI_IBG_Team_TMs</role>
    </sharedTo>
</ListView>